# sleep_monitoring

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt  requirements2.txt  sleep_monitoring_logger.service  sleepu-logger.service
apps/: sleepu_clinic_app.py  sleepu_dashboard.py
logging_service/: sleepu_logger.py
scripts/: migrate_csv_to_db.py
sleep_monitoring/: __init__.py  config.py  data_io.py  db.py  logger_service.py  metrics.py
sleep_monitoring.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sleep_monitoring/dash_app/: AGENTS.md  __init__.py  app.py  events_callbacks.py  events_layout.py  layouts.py  live_callbacks.py  live_layout.py  review_callbacks.py  review_layout.py  theme.py  utils.py
sleep_monitoring/dash_app/assets/: style.css  theme.css
sleepu/ble/: viatom-ble.py
systemd/: sleep_monitoring_logger.service
